--- a/sass/header/_header.scss
+++ b/sass/header/_header.scss
@@ -7,7 +7,6 @@ nav {
   @include mq-tablet {
     background-image: url(./assets/header-bg-2x.png);
     height: 600px;
-    background-size: auto;
   }
   .navigation-container {
     position: relative;
@@ -52,8 +51,10 @@ nav {
         @include mq-tablet {
           padding: 0;
           flex-direction: row;
-          justify-content: space-around;
+          justify-content: space-between;
           height: 100%;
+          max-width: 768px;
+          margin: auto;
         }
         li {
           margin-bottom: 30px;
@@ -87,6 +88,7 @@ nav {
   }
   .logo-container {
     width: 100%;
+    max-width: 500px;
     height: auto;
     position: absolute;
     top: 50%;
