--- a/sass/sections/_section.scss
+++ b/sass/sections/_section.scss
@@ -31,7 +31,7 @@ section {
       display: flex;
       justify-content: space-between;
       .text {
-        width: 35%;
+        width: 55%;
         p {
           text-align: left;
           padding: 0;
@@ -108,6 +108,7 @@ section {
         @include mq-tablet {
           font-size: 1.8rem;
           line-height: 28px;
+          margin-bottom: 20px;
         }
       }
     }
