--- a/main.css
+++ b/main.css
@@ -2,7 +2,7 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: content-box;
+  box-sizing: border-box;
   list-style-type: none;
   font-family: "Open Sans", sans-serif;
 }
@@ -29,7 +29,6 @@ nav {
   position: relative;
   background-image: url(./assets/header-bg.png);
   background-size: contain;
-  background-attachment: fixed;
   height: 500px;
 }
 
