--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -5,7 +5,7 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: content-box;
+  box-sizing: border-box;
   list-style-type: none;
   font-family: "Open Sans", sans-serif;
 }
