--- a/main.css
+++ b/main.css
@@ -156,10 +156,6 @@ section h2 {
   text-align: center;
 }
 
-section h1 {
-  margin: 30px 0;
-}
-
 section p {
   text-align: center;
   padding: 0 20px;
@@ -186,6 +182,15 @@ section p {
     display: flex;
     justify-content: space-between;
   }
+}
+
+@media (min-width: 768px) and (min-width: 768px) {
+  .section-1 .text-img {
+    padding-top: 30px;
+  }
+}
+
+@media (min-width: 768px) {
   .section-1 .text-img .text {
     width: 55%;
   }
@@ -202,8 +207,7 @@ section p {
 @media (min-width: 768px) {
   .section-1 .img-pub {
     display: block;
-    margin-top: 30px;
-    height: 100%;
+    height: fit-content;
   }
   .section-1 .img-pub img {
     width: auto;
@@ -263,8 +267,22 @@ section p {
   flex-direction: column-reverse;
 }
 
-.section-2 .part-two img {
-  transform: translateY(3px);
+.section-2 .part-two .bg-stormtroopers-container {
+  overflow: hidden;
+  position: relative;
+}
+
+.section-2 .part-two .bg-stormtroopers-container .bg-stormtroopers {
+  background: url(./assets/stormtroopers.jpg) 50%/cover no-repeat;
+  background-repeat: no-repeat;
+  height: 250px;
+}
+
+@media (min-width: 768px) {
+  .section-2 .part-two .bg-stormtroopers-container .bg-stormtroopers {
+    background: url(./assets/stormtroopers-2x.jpg);
+    height: 500px;
+  }
 }
 
 .section-2 .part-two ul {
